// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation component should not render because there is no previous items nor next items 1`] = `null`;

exports[`Navigation component should render with (prev button disabled: false) and (next button disabled: false) 1`] = `
<span
  class="group horizontal"
>
  <button
    aria-disabled="false"
    class="ui-button-wrapper-a432 wrapper ui-button-fill-a432 ui-button-secondary-a432"
    id="prev-btn"
    type="button"
  >
    <span
      class="ui-button-content-a432"
    >
      <i
        class="material-icons icon"
      >
        keyboard_arrow_left
      </i>
    </span>
  </button>
  <button
    aria-disabled="false"
    class="ui-button-wrapper-a432 wrapper ui-button-fill-a432 ui-button-secondary-a432"
    id="next-btn"
    type="button"
  >
    <span
      class="ui-button-content-a432"
    >
      <i
        class="material-icons icon"
      >
        keyboard_arrow_right
      </i>
    </span>
  </button>
</span>
`;

exports[`Navigation component should render with (prev button disabled: false) and (next button disabled: true) 1`] = `
<span
  class="group horizontal"
>
  <button
    aria-disabled="false"
    class="ui-button-wrapper-a432 wrapper ui-button-fill-a432 ui-button-secondary-a432"
    id="prev-btn"
    type="button"
  >
    <span
      class="ui-button-content-a432"
    >
      <i
        class="material-icons icon"
      >
        keyboard_arrow_left
      </i>
    </span>
  </button>
  <button
    aria-disabled="true"
    class="ui-button-wrapper-a432 wrapper ui-button-fill-a432 ui-button-secondary-a432 ui-button-isdisabled-a432"
    id="next-btn"
    type="button"
  >
    <span
      class="ui-button-content-a432"
    >
      <i
        class="material-icons icon"
      >
        keyboard_arrow_right
      </i>
    </span>
  </button>
</span>
`;

exports[`Navigation component should render with (prev button disabled: true) and (next button disabled: false) 1`] = `
<span
  class="group horizontal"
>
  <button
    aria-disabled="true"
    class="ui-button-wrapper-a432 wrapper ui-button-fill-a432 ui-button-secondary-a432 ui-button-isdisabled-a432"
    id="prev-btn"
    type="button"
  >
    <span
      class="ui-button-content-a432"
    >
      <i
        class="material-icons icon"
      >
        keyboard_arrow_left
      </i>
    </span>
  </button>
  <button
    aria-disabled="false"
    class="ui-button-wrapper-a432 wrapper ui-button-fill-a432 ui-button-secondary-a432"
    id="next-btn"
    type="button"
  >
    <span
      class="ui-button-content-a432"
    >
      <i
        class="material-icons icon"
      >
        keyboard_arrow_right
      </i>
    </span>
  </button>
</span>
`;
